# electronics_retail_chain

./: .env.example  README.md  pyproject.toml
electronics_retail_chain/app/: admin.py  filters.py  models.py  serializers.py  urls.py  validators.py  views.py
electronics_retail_chain/app/migrations/: 0001_initial.py  0002_alter_network_options.py  0003_alter_product_date.py
electronics_retail_chain/config/: settings.py  urls.py
electronics_retail_chain/fixtures/: app.json
electronics_retail_chain/users/: models.py  permissions.py  urls.py  views.py
electronics_retail_chain/users/migrations/: 0001_initial.py
